Temporary fix for getting a JAR resource working cross-platform, will need a better solution, this is all I can think about now half asleep, pls don't have a go at me for the ugly fix :)